--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 black==20.8b1
 click==7.1.2
 click-log==0.3.2
+discord.py==1.6.0
+discord.py-stubs==1.6.0.1
 flake8==3.8.4
 flake8-black==0.2.1
 flake8-import-order==0.18.1
 mypy==0.812
 Pillow==8.1.0
 pytest==6.2.2
+python-dotenv==0.15.0
