--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ flake8==3.8.4
 flake8-black==0.2.1
 flake8-import-order==0.18.1
 mypy==0.812
+pandas==1.2.2
 Pillow==8.1.0
 pytest==6.2.2
 python-dotenv==0.15.0
