--- a/.github/workflows/qa.yaml
+++ b/.github/workflows/qa.yaml
@@ -7,3 +7,11 @@ jobs:
     steps:
       - name: Check out code
         uses: actions/checkout@v2
+      - name: Update Conda environment
+        uses: matthewrmshin/conda-action@v1.1
+        with:
+          args: conda env update
+      - name: Run QA steps
+        uses: matthewrmshin/conda-action@v1.1
+        with:
+          args: de qa
