--- a/.github/workflows/qa.yaml
+++ b/.github/workflows/qa.yaml
@@ -7,6 +7,10 @@ jobs:
     steps:
       - name: Check out code
         uses: actions/checkout@v2
+      - name: WHERE THE F AM I
+        uses: matthewrmshin/conda-action@v1.1
+        with:
+          args: pwd
       - name: Update Conda environment
         uses: matthewrmshin/conda-action@v1.1
         with:
