--- a/.github/workflows/qa.yaml
+++ b/.github/workflows/qa.yaml
@@ -7,15 +7,19 @@ jobs:
     steps:
       - name: Check out code
         uses: actions/checkout@v2
-      - name: WHERE THE F AM I
-        uses: matthewrmshin/conda-action@v1.1
-        with:
-          args: ls
       - name: Update Conda environment
         uses: matthewrmshin/conda-action@v1.1
         with:
           args: conda env update
-      - name: Run QA steps
+      - name: Install the package
         uses: matthewrmshin/conda-action@v1.1
         with:
-          args: PYTHONPATH=./python/de/cli.py qa
+          args: pip install .
+      - name: Run linting
+        uses: matthewrmshin/conda-action@v1.1
+        with:
+          args: de lint
+       - name: Run tests
+        uses: matthewrmshin/conda-action@v1.1
+        with:
+          args: de test
