--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,8 +1,8 @@
-name: QA
-on: [push, pull_request]
+name: Deploy
+on: push
 jobs:
-  qa:
-    name: Run QA checks
+  sync-discord:
+    name: Sync Discord state
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -15,12 +15,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install -e .
-      - name: Run flake8
-        run: |
-          flake8 ./
-      - name: Run shellcheck
-        uses: ludeeus/action-shellcheck@master
-        with:
-          scandir: ./scripts
       - name: Run pytest
         run: pytest
+      - name: Sync emojis
+        run: de sync-emojis --yarly
