--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -16,4 +16,6 @@ jobs:
           pip install -r requirements.txt
           pip install -e .
       - name: Sync emojis
+        env:
+          DISCORD_API_TOKEN: ${{ secrets.DISCORD_API_TOKEN }}
         run: de sync-emojis --yarly
