Add alembic migrations to deploy

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -21,4 +21,6 @@ jobs:
       - name: Sync emojis
         env:
           DISCORD_API_TOKEN: ${{ secrets.DISCORD_API_TOKEN }}
-        run: de sync-emojis --yarly
+        run: |
+          alembic upgrade head
+          de sync-emojis --yarly
