Fixes to alembic, addition of migrations db

--- a/alembic.ini
+++ b/alembic.ini
@@ -16,7 +16,7 @@ timezone = UTC
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = mysql://migrations.db
+sqlalchemy.url = sqlite:///migrations.db
 
 [post_write_hooks]
 hooks=black
