--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -24,3 +24,11 @@ jobs:
         run: |
           alembic upgrade head
           de sync-emojis --yarly
+      - uses: EndBug/add-and-commit@v7
+        with:
+          if: "!contains(github.event.head_commit.message, 'Update migration status'"
+          add: migrations.db
+          author_name: GitHub CI Bot
+          author_email: josh.holbrook@gmail.com
+          message: "Update migration status"
+          push: true
