--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -25,7 +25,7 @@ jobs:
           alembic upgrade head
           de sync-emojis --yarly
       - uses: EndBug/add-and-commit@v7
-        if: "!contains(github.event.head_commit.message, 'Update migration status'"
+        if: "!contains(github.event.head_commit.message, 'Update migration status')"
         with:
           add: migrations.db
           author_name: GitHub CI Bot
